--- a/BOOKS/金枝/上册/第三章　交感巫术/第二节　顺势或模仿巫术.md
+++ b/BOOKS/金枝/上册/第三章　交感巫术/第二节　顺势或模仿巫术.md
@@ -5,7 +5,7 @@ created_time: 1742437841481
 
 在各个时代，都有不少人把伤害、毁灭敌人的偶像当成一种打击、消灭敌人的手段，因为他们相信偶像的伤亡会直接导致本体的伤亡。这或许是“同类相生”原则最常见的应用。这种习俗在全世界流传有多广，持续有多久，我们只要从大量实例中随手举几个就足以明了。不仅是在几千年前印度、巴比伦、埃及、希腊、罗马的巫师，即使是现在的澳大利亚、非洲和苏格兰，还有一些心存恶念的奸狡之徒都在用这种做法。北美印第安人也有类似的做法。他们会把仇人的画像或任何可以代替仇人的东西，画在沙子、泥土或灰烬上，然后用尖锐的木刺或其他东西去损坏它。他们相信，这样一来，画像所代表的那个人就会受到相应的伤害。比如，奥吉布威印第安人会照着仇人的样子做一个小木偶，把针或箭头刺入它的头或心脏里，以达到伤害仇人的目的。他相信，人偶被扎伤或刺伤哪里，同一时间，仇人相应的身体部位也会发生剧烈的疼痛。如果他想置仇人于死地，只要一边念咒一边把人偶埋掉或烧掉即可。秘鲁印第安人如果讨厌谁或害怕谁，就用脂肪或面粉为那人捏一个塑像，并在那人的必经之路上烧毁塑像。按照他们的说法，“这是在焚烧那人的灵魂”。
 
-马来人也有类似的巫术。如果你想杀某人，首先得拿到能代表其身体各个部位的东西，比如指甲、头发、眉毛、唾液等物；然后和空蜂巢里的蜂蜡混合到一起，做成那个人的蜡像；最后一连七晚，将蜡像放到炉火边上，一边反复念着：“我烤的不是蜡，是某某人的心和脾、肝脏！”，一边把蜡像烤化；到了第七个晚上，等蜡像烧完，他的仇人就会死去。偶像是对仇人的模仿，而指甲、头发、唾液等物都和仇人有过接触，所以这种巫术毫无疑问同时遵循了顺势巫术和接触巫术的原则。比起这种巫术，马来人的另一种巫术更像奥吉布威印第安人的巫术，就是从空蜂巢中取出蜂蜡，做一个和脚印差不多大的蜡像尸身。如果想弄瞎仇人的眼睛，就扎蜡像的眼睛；如果想要仇人胃疼，就扎蜡像的肚子；如果想让仇人头疼，就刺蜡像的脑袋；如果想让仇人胸口疼，就扎蜡像的胸膛。如果想直接杀死仇人，就从头顶刺穿蜡像。然后，像包裹真正的尸体一样，用寿衣把蜡像包好，再像对着真正的尸体一样，对着蜡像祝祷，最后将它埋到仇人必经之路的中央。为免他死后找你算账，还要说：“埋你的人不是我，是加百列。”
+马来人也有类似的巫术。如果你想杀某人，首先得拿到能代表其身体各个部位的东西，比如指甲、头发、眉毛、唾液等物；然后和空蜂巢里的蜂蜡混合到一起，做成那个人的蜡像；最后一连七晚，将蜡像放到炉火边上，一边反复念着：“我烤的不是蜡，是某某人的心和脾、肝脏！”，一边把蜡像烤化；到了第七个晚上，等蜡像烧完，他的仇人就会死去。偶像是对仇人的模仿，而指甲、头发、唾液等物都和仇人有过接触，所以这种巫术毫无疑问同时遵循了顺势巫术和接触巫术的原则。比起这种巫术，马来人的另一种巫术更像奥吉布威印第安人的巫术，就是从空蜂巢中取出蜂蜡，做一个和脚印差不多大的蜡像尸身。如果想弄瞎仇人的眼睛，就扎蜡像的眼睛；如果想要仇人胃疼，就扎蜡像的肚子；如果想让仇人头疼，就刺蜡像的脑袋；如果想让仇人胸口疼，就扎蜡像的胸膛。如果想直接杀死仇人，就从头顶刺穿蜡像。==然后，像包裹真正的尸体一样，用寿衣把蜡像包好，再像对着真正的尸体一样，对着蜡像祝祷，最后将它埋到仇人必经之路的中央。为免他死后找你算账，还要说：“埋你的人不是我，是加百列。”==
 
 如此一来，这项杀人罪便落到了大天使加百列的头上。杀人这样的罪名与其由自己来担，由加百列来担，岂不是好很多？
 
