--- a/BOOKS/金枝/下册/第六十六章　民间故事中灵魂寄存于体外的观念.md
+++ b/BOOKS/金枝/下册/第六十六章　民间故事中灵魂寄存于体外的观念.md
@@ -1,11 +1,12 @@
 ---
 created_time: 1742437842838
 ---
-   
+
+
 
 # 第六十六章　民间故事中灵魂寄存于体外的观念
 
-如前所述，原始人认为灵魂可以暂时出窍而不会造成死亡。传说游历在外的灵魂如果被敌人抓住，很容易受到损伤或遭遇其他伤害，所以这种暂时出窍的情况其实相当危险，但灵魂出窍可以让人拥有另一种力量。如果灵魂出窍期间能确保安全，大可以让灵魂长期出窍。如果纯粹为个人安全考虑，灵魂永远待在外面其实更好。原始人没有生命是“知觉的不断的可能”或“随着外界变化而不断调整内心的过程”这种抽象概念，在他们看来，生命是一种具体的物质的东西，有具体的体积，看得见摸得着，能够装在箱子或罐子里，同时也容易受伤、断裂或被碾碎。他们相信这样的生命不一定非要留在人的体内不可，它可以离开身体而独立存在，可以在体外远距离地感应或控制身体，并使身体继续保持活力。只要他们叫作“生命”（或“灵魂”）的物体保存完好，这个人就可以好好活着。如果这个物体受伤，本人就受伤；如果这个物体被毁了，本人就死亡。换言之，人们认为本人之所以会生病或死亡，是因为那种被叫作“生命”（或“灵魂”）的物体受伤了或被毁了，无论它当时在他的体内还是体外。还有一种可能，“生命”（或“灵魂”）在体内比在体外更容易受到伤害，最好的办法是找个隐秘的地方把它藏起来。在这种情况下，原始人为了保护自己，就把灵魂从身体里取出来，放到一个安全隐秘的地方，等没事了再收回体内。或者，如果他找到的地方真的绝对安全，大可以把灵魂永远蔵在那里。如此一来，只要灵魂在那里不受损伤，他就能永生不死。因为生命不在体内，任何东西都伤害不了他。
+如前所述，原始人认为灵魂可以暂时出窍而不会造成死亡。传说游历在外的灵魂如果被敌人抓住，很容易受到损伤或遭遇其他伤害，所以这种暂时出窍的情况其实相当危险，但灵魂出窍可以让人拥有另一种力量。如果灵魂出窍期间能确保安全，大可以让灵魂长期出窍。如果纯粹为个人安全考虑，灵魂永远待在外面其实更好。原始人没有生命是“知觉的不断的可能”或“随着外界变化而不断调整内心的过程”这种抽象概念，在他们看来，生命是一种具体的物质的东西，有具体的体积，看得见摸得着，能够装在箱子或罐子里，同时也容易受伤、断裂或被碾碎。他们相信这样的生命不一定非要留在人的体内不可，它可以离开身体而独立存在，可以在体外远距离地感应或控制身体，并使身体继续保持活力。只要他们叫作“生命”（或“灵魂”）的物体保存完好，这个人就可以好好活着。如果这个物体受伤，本人就受伤；如果这个物体被毁了，本人就死亡。换言之，人们认为本人之所以会生病或死亡，是因为那种被叫作“生命”（或“灵魂”）的物体受伤了或被毁了，无论它当时在他的体内还是体外。还有一种可能，“生命”（或“灵魂”）在体内比在体外更==容易受到伤害，最好的办法是找个隐秘的地方把它藏起来。在这种情况下，原始人为了保护自己，就把灵魂从身体里取出来，放到一个安全隐秘的地方，等没事了再收回体内。或者，如果他找到的地方真的绝对安全，大可以把灵魂永远蔵在那里。如此一来，只要灵魂在那里不受损伤，他就能永生不死。因为生命不在体内，任何东西都伤害不了他。==
 
 很多民间传说可以证明原始人确实有这种想法，比如家喻户晓的北欧传说《心脏不在体内的巨人》，就是一个最好的例子。世界各地都有这类故事，其庞大的数量和体现其思想内涵的种种细节和事件，都在告诉我们，灵魂在体外这种概念在早期的人类思想中占有极其重要的位置。因为民间故事是原始人思想对客观世界的忠实反映，这些故事中普遍存在的任何思想，无论在我们看来是多么荒唐可笑，对原始人来说一定都是很普通很正常的。比如灵魂可以长时间或暂时出窍这种观念，我们不妨把原始人的实际想法和行为，与民间故事中所谈及的加以比较，就能充分证实我们的推论。我们先列举一些故事，然后再回来继续研究这个问题。我们列举故事所依据的原则是，既能说明其特点又能说明其流传的情况。
 
